--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </article> 
         
         <article class="blog">
-            <img class="component" src="components/8/component.jpg" alt="Component: Header"/>
+            <img class="component" src="components/8/component.png" alt="Component: Header"/>
             <h2>Component #8: Footer </h2>
             <h3>Target Audience</h3>
                 The target audience for this footer is MMA fans. This site features MMA fighters and merchandise for fans. A mix of men and women, however more likely men. Their age ranges from 25 to 35.</p>
